wrap property fix

--- a/frontend/src/metabase/css/core/link.css
+++ b/frontend/src/metabase/css/core/link.css
@@ -19,7 +19,7 @@
   text-decoration: none;
 }
 .link--wrappable {
-  word-break: break-all;
+  /* word-break: break-all; */
 }
 
 .link--icon {
