--- a/frontend/src/metabase/visualizations/components/Table.css
+++ b/frontend/src/metabase/visualizations/components/Table.css
@@ -4,9 +4,8 @@
   border-spacing: 0;
 
   width: 100%;
-
+  
   font-size: 12px;
-  line-height: 25px;
   text-align: left;
 }
 
@@ -18,7 +17,7 @@
 :local(.Table) td {
   padding: 0.72em;
   border-bottom: 1px solid color(var(--color-border) alpha(-70%));
-}
+  }
 
 :local(.TableSimple) th:first-child,
 :local(.TableSimple) td:first-child {
